@@ -1,3 +1,10 @@
+2017-07-15  Albrecht Dreß
+
+	* libbalsa/libbalsa-progress.c (revealer_destroy_notify),
+	(libbalsa_progress_dialog_update), (remove_progress_widget):
+	save a time-out id and remove the source if the progress dialog
+	is closed before the time-out expires.
+
 2017-07-02  Albrecht Dreß
 
 	Gpgme-related improvements
